fixed margin for login and signup__content  , overflow: none and removed padding-top from .login , .signup selector

--- a/style.css
+++ b/style.css
@@ -222,17 +222,16 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: none; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
     cursor: auto;
   }
   
   /* login Content/Box */
   .login__content { 
     background-color: #131313;
-    margin: 170px auto; /* 15% from the top and centered */
+    margin: 85px auto; /* 15% from the top and centered */
     border-radius: 25px;
     padding: 20px;
     width: 400px;
@@ -389,7 +388,7 @@
 /* The Sign Up (background) */
 .signup__content {
   background-color: #131313;
-  margin: 170px auto; /* 15% from the top and centered */
+  margin: 85px auto; /* 15% from the top and centered */
   border-radius: 25px;
   padding: 20px;
   width: 450px;
